--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ env:
     - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 
 android:
-  components: # Cookbooks version: https://github.com/travis-ci/travis-cookbooks/tree/94f697cf01ee1e5a274fca1d0719101969953098/community-cookbooks/android-sdk
-    - tools # Update preinstalled tools from revision 24.0.2 to 24.4.1
+  components: # Cookbooks version: https://github.com/travis-ci/travis-cookbooks/blob/15e4d29b95df2f011aa99c295ebb1f664b6619c0/community-cookbooks/android-sdk/attributes/default.rb
+#    - tools # Update preinstalled tools from revision 25.2.3 to 25.2.5
     - build-tools-${ANDROID_BUILD_TOOLS_VERSION}
-    - platform-tools # Update platform-tools to revision 25.0.3+
-    - tools # Update tools from revision 24.4.1 to 25.2.5
+#    - platform-tools # Update platform-tools to revision 26+
+#    - tools # Update tools from revision 24.4.1 to 25.2.5
 
 #matrix:
 #  include: # More Emulator API levels to build in parallel
