--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
     - GRADLE_USER_HOME="${TRAVIS_BUILD_DIR}/gradle" # Change location for Gradle Wrapper and cache
     - ANDROID_HOME=/usr/local/android-sdk-24.0.2 # Depends on the cookbooks version used in the VM
     - TOOLS=${ANDROID_HOME}/tools # PATH order matters, exists more than one emulator script
-    - PATH=${ANDROID_HOME}:${ANDROID_HOME}/emulator:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}
+    - PATH=${ANDROID_HOME}:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}:${ANDROID_HOME}/emulator
     - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
 
 android:
