--- a/.travis.yml
+++ b/.travis.yml
@@ -72,7 +72,8 @@ install:
 
 before_script:
   # Wait for emulator fully-booted and disable animations
-  - ls -Al
+  - ls /usr/local -Al
+  - ls /usr/local/scripts -Al || true
   - cat android-wait-for-emulator
   - android-wait-for-emulator
   - adb shell settings put global window_animation_scale 0 &
