--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ before_script:
   # Wait for emulator fully-booted and disable animations
   - adb devices
 #  - android-wait-for-emulator
+  - sleep 300
   - adb shell settings put global window_animation_scale 0 &
   - adb shell settings put global transition_animation_scale 0 &
   - adb shell settings put global animator_duration_scale 0 &
