--- a/.travis.yml
+++ b/.travis.yml
@@ -60,7 +60,7 @@ install:
   - echo yes | sdkmanager "${EMULATOR}" # Install emulator system image
   # Create and start emulator
   - echo no | avdmanager create avd -n acib -k "${EMULATOR}" -f --abi "${EMULATOR_TAG}/${EMULATOR_ABI}" --tag "${EMULATOR_TAG}" --device 'Nexus 4' -c 128M
-  - emulator -avd acib -engine classic -no-window -no-boot-anim -skin 768x1280 -camera-back none -camera-front none -selinux permissive -verbose -qemu -m 512 &
+  - emulator -avd acib -writable-system -engine classic -no-window -no-boot-anim -skin 768x1280 -camera-back none -camera-front none -selinux permissive -verbose -qemu -m 512 &
   # Start adbd, wait for device connected and show android serial
   - adb wait-for-device get-serialno
   # Check components status
